// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid component should render alignment correctly 1`] = `
<div
  class="Grid"
  style="padding:0 1em"
>
  <div
    class="Grid-item"
    style="align-self:center"
  >
    children
  </div>
</div>
`;

exports[`Grid component should render colSpan correctly 1`] = `
<div
  class="Grid"
  style="padding:0 1em"
>
  <div
    class="Grid-item"
    style="grid-column-end:span 2"
  >
    children
  </div>
</div>
`;

exports[`Grid component should render colStart correctly 1`] = `
<div
  class="Grid"
  style="padding:0 1em"
>
  <div
    class="Grid-item"
    style="grid-column-start:2"
  >
    children
  </div>
</div>
`;

exports[`Grid component should render correctly 1`] = `
<div
  class="Grid"
  style="padding:0 1em"
>
  <div
    class="Grid-item"
  >
    children
  </div>
</div>
`;

exports[`Grid component should render justification correctly 1`] = `
<div
  class="Grid"
  style="padding:0 1em"
>
  <div
    class="Grid-item"
    style="justify-self:center"
  >
    children
  </div>
</div>
`;

exports[`Grid component should render rowSpan correctly 1`] = `
<div
  class="Grid"
  style="padding:0 1em"
>
  <div
    class="Grid-item"
    style="grid-row-end:span 2"
  >
    children
  </div>
</div>
`;

exports[`Grid component should render rowStart correctly 1`] = `
<div
  class="Grid"
  style="padding:0 1em"
>
  <div
    class="Grid-item"
    style="grid-row-start:2"
  >
    children
  </div>
</div>
`;
